# variant-nnue-pytorch

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  compile_data_loader.bat  compile_data_loader.sh  cross_check_eval.py  feature_set.py  feature_transformer.py  features.py  halfka_v2.py  model.py  nnue_dataset.py  pytest.ini  ranger.py  requirements-CPU.txt  requirements-CUDA128.txt  requirements.txt  serialize.py  serialize_atomic_v2.py  train.py  train_atomic_v2.py  train_atomic_v3.py  training_data_loader.cpp  variant.h  variant.py  visualize.py  visualize_multi_hist.py
.github/workflows/: trainer-tests.yml
atomic_v2/: __init__.py  checkpoint.py  contract.py  dataset.py  model.py  quantization.py  serialization.py  training.py
atomic_v2/schema/: atomic-nnue-v2.json
atomic_v3/: __init__.py  bootstrap_dataset.py  checkpoint.py  contract.py  dataset.py  dataset_source.py  dense.py  executor.py  indices.py  model.py  native_provider.py  performance_benchmark.py  performance_gate.py  production.py  quantization.py  serialization.py  sparse_transformer.py  training.py
docs/: atomic-bin-v2.md  atomic-nnue-v2.md  atomic-nnue-v3-bootstrap-executor.md  atomic-nnue-v3-trainer-core.md  atomic-v3-trainer-performance-postmortem.md  features.md  legacy-atomic-v1.md
lib/: atomic_bin_v2_training_data.h  atomic_stockfish_tt_stub.cpp  atomic_v3_provider.cpp  atomic_v3_provider.h  dataset_file_identity.cpp  dataset_file_identity.h  nnue_training_data_formats.h  nnue_training_data_stream.h
scripts/: benchmark_atomic_v3_repair.py  canary_atomic_v3_production.py  train.sh
tests/: conftest.py  native_loader_tests.cpp  test_atomic_v2_backend_isolation.py  test_atomic_v2_contract.py  test_atomic_v2_dataset.py  test_atomic_v2_model.py  test_atomic_v2_serialization.py  test_atomic_v2_training.py  test_atomic_v3_backend_isolation.py  test_atomic_v3_bootstrap_dataset.py  test_atomic_v3_contract_indices.py  test_atomic_v3_dataset.py  test_atomic_v3_executor_checkpoint.py  test_atomic_v3_model_training.py  test_atomic_v3_native_provider.py  test_atomic_v3_performance_benchmark.py  test_atomic_v3_performance_gate.py  test_atomic_v3_production_cli.py  test_atomic_v3_production_entry_evidence.py  test_atomic_v3_repair_benchmark_cli.py  test_atomic_v3_serialization.py  test_atomic_v3_sparse_transformer.py  test_cpu_gpu_forward.py  test_feature_set.py  test_legacy_nnue.py  test_native_loader_integration.py  test_nnue_dataset_seed.py  test_train_reliability.py  test_trainer_ci_contract.py
tests/fixtures/atomic_v3/: trainer-core-v1.json
